--- a/Views/Book/Create.cshtml
+++ b/Views/Book/Create.cshtml
@@ -3,7 +3,7 @@
     Layout = "_Layout";
 }
 
-<h2>➕ Add New Book</h2>
+<h2><i data-lucide="plus-circle"></i> Add New Book</h2>
 
 <form asp-action="Create" method="post" style="max-width: 600px;">
     <div style="margin-bottom: 1rem;">
@@ -36,6 +36,6 @@
         <span asp-validation-for="LibraryBranchId" class="text-error"></span>
     </div>
 
-    <button type="submit" class="btn btn-blue">Save</button>
-    <a asp-action="Index" class="btn btn-secondary" style="margin-left: 0.5rem;">Cancel</a>
+    <button type="submit" class="btn btn-blue"><i data-lucide="save"></i> Save</button>
+    <a asp-action="Index" class="btn btn-secondary" style="margin-left: 0.5rem;"><i data-lucide="x"></i> Cancel</a>
 </form>
