--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
     <!-- borrow a book -->
     <div style="margin-top: 3rem;">
         <a asp-controller="Book" asp-action="Index" class="btn btn-outline btn-lg">
-            📚 Borrow a Book 📚
+            <i data-lucide="book-open"></i> Borrow a Book
         </a>
     </div>
 
