--- a/Views/Book/Create.cshtml
+++ b/Views/Book/Create.cshtml
@@ -36,6 +36,6 @@
         <span asp-validation-for="LibraryBranchId" class="text-error"></span>
     </div>
 
-    <button type="submit" class="btn btn-blue"><i data-lucide="save"></i> Save</button>
-    <a asp-action="Index" class="btn btn-secondary" style="margin-left: 0.5rem;"><i data-lucide="x"></i> Cancel</a>
+    <button type="submit" class="btn btn-blue">Save</button>
+    <a asp-action="Index" class="btn btn-secondary" style="margin-left: 0.5rem;">Cancel</a>
 </form>
