--- a/Views/Customer/Create.cshtml
+++ b/Views/Customer/Create.cshtml
@@ -22,7 +22,7 @@
     </div>
 
     <div style="margin-top: 1rem;">
-        <button type="submit" class="btn btn-blue"><i data-lucide="save"></i> Save</button>
-        <a asp-action="Index" class="btn btn-secondary" style="margin-left: 0.5rem;"><i data-lucide="x"></i> Cancel</a>
+        <button type="submit" class="btn btn-blue">Save</button>
+        <a asp-action="Index" class="btn btn-secondary" style="margin-left: 0.5rem;">Cancel</a>
     </div>
 </form>
