--- a/Views/LibraryBranch/Create.cshtml
+++ b/Views/LibraryBranch/Create.cshtml
@@ -11,6 +11,6 @@
         <input asp-for="BranchName" type="text" required />
     </div>
 
-    <button type="submit" class="btn btn-blue"><i data-lucide="save"></i> Save</button>
-    <a asp-action="Index" class="btn btn-secondary" style="margin-left: 0.5rem;"><i data-lucide="x"></i> Cancel</a>
+    <button type="submit" class="btn btn-blue">Save</button>
+    <a asp-action="Index" class="btn btn-secondary" style="margin-left: 0.5rem;">Cancel</a>
 </form>
