--- a/Views/LibraryBranch/Delete.cshtml
+++ b/Views/LibraryBranch/Delete.cshtml
@@ -25,6 +25,6 @@
         </div>
 
         <button type="submit" class="btn btn-danger"><i data-lucide="trash-2"></i> Yes, Delete</button>
-        <a href="@Url.Action("Index")" class="btn btn-secondary" style="margin-left: 0.75rem;"><i data-lucide="x"></i> Cancel</a>
+        <a href="@Url.Action("Index")" class="btn btn-secondary" style="margin-left: 0.75rem;">Cancel</a>
     </form>
 </div>
