--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -25,7 +25,7 @@
         </label>
     </div>
 
-    <button type="submit" class="btn btn-blue"><i data-lucide="log-in"></i> Login</button>
+    <button type="submit" class="btn btn-blue">Login</button>
 </form>
 
 <hr style="margin: 2rem 0;" />
