--- a/Views/Customer/Delete.cshtml
+++ b/Views/Customer/Delete.cshtml
@@ -26,5 +26,5 @@
     <input type="hidden" name="CustomerId" value="@Model.CustomerId" />
 
     <button type="submit" class="btn btn-danger"><i data-lucide="trash-2"></i> Yes, Delete</button>
-    <a asp-action="Index" class="btn btn-secondary" style="margin-left: 0.5rem;"><i data-lucide="x"></i> Cancel</a>
+    <a asp-action="Index" class="btn btn-secondary" style="margin-left: 0.5rem;">Cancel</a>
 </form>
