--- a/Views/LibraryBranch/Edit.cshtml
+++ b/Views/LibraryBranch/Edit.cshtml
@@ -14,6 +14,6 @@
         <span asp-validation-for="BranchName" class="text-error"></span>
     </div>
 
-    <button type="submit" class="btn btn-blue"><i data-lucide="save"></i> Save</button>
-    <a href="@Url.Action("Index")" class="btn btn-secondary" style="margin-left: 0.75rem;"><i data-lucide="x"></i> Cancel</a>
+    <button type="submit" class="btn btn-blue">Save</button>
+    <a href="@Url.Action("Index")" class="btn btn-secondary" style="margin-left: 0.75rem;">Cancel</a>
 </form>
