--- a/Views/LibraryBranch/Index.cshtml
+++ b/Views/LibraryBranch/Index.cshtml
@@ -21,11 +21,7 @@
 </form>
 
 <!-- Add Button Section -->
-<div class="row" style="margin-top: 1.5rem;">
-    <div class="col-12">
-        <a asp-action="Create" class="btn btn-secondary"><i data-lucide="plus-circle"></i> Add New Branch</a>
-    </div>
-</div>
+<a asp-action="Create" class="btn btn-secondary" style="margin-bottom: 1rem;"><i data-lucide="plus-circle"></i> Add New Branch</a>
 
 <!-- Table Section -->
 <div class="markdown-table-container">
